2016-06-08 Yann LEYDIER <yann@leydier.info>
	* Document (ExportSpacings): Added.
	* all files: Added © message and license.
	* GUI (about): Fixed © message and added authors list.

2016-06-07 Yann LEYDIER <yann@leydier.info>
	* GUI (cstr, setup_window): Modified menu and toolbar layouts.
	* GUI (selection_changed): Now displays a popup to add a new line.
	* GUI (export_spaces): Added.

2016-06-01 Yann LEYDIER <yann@leydier.info>
	* GUI (overlay_changed): Now using an option for coalescent word boundaries.
	* View (AddGraphicalLine): Now estimates the line's height if there was no
		 existing lines.
	* Document (ExportStats): Reenabled.
	* GUI (set_font): Now also sets the font in main panel image's overlays.

2016-04-08 Yann LEYDIER <yann@leydier.info>
	* CharacterTree: Added a HPaned around the tree.

2016-04-04 Yann LEYDIER <yann@leydier.info>
	* Config (GetFont, SetFont): Added.
	* GUI (change_font): Now saving the font.
	* Validation (cstr), CharacterDialog (cstr), GlyphSelection (cstr),
	ValidationPanel(refresh), GUI (find_string): 
			Now using user selected font.
	* GUI (set_font): Added (global tooltip font and image overlays).

2016-04-01 Yann LEYDIER <yann@leydier.info>
	* GraphicalLine (ExtractFeatures): Crashed when overflowing the image's
			boundaries.
	* GUI (tree_selection_changed, edit_overlays): Fixed behaviour with line
			edition and view depth.
	* View (SetWordSignatureImage, GetWordSignatureImage,
			ClearSignaturesAlignement), View_Impl_WordValidation(imgsig): Added.
	* AlignRange: Now clears the character alignment when changing a word's
			bounding box.
	* Document (PropagateValidation): Bugfix (was crashing when a line 
			contained less than 3 words).
	* Document (conclude_word): Do not perform validation propagation when
			unneeded.
	* Document (on_close): Perform validation propagation when needed.
	* Validation (read_word): Reactivated clustering.

2016-03-29 Yann LEYDIER <yann@leydier.info>