@@ -1,3 +1,7 @@
+2016-06-13 Yann LEYDIER <yann@leydier.info>
+	* View (AlignWordCharacters): Better error message when a character has no
+			signature.
+
 2016-06-08 Yann LEYDIER <yann@leydier.info>
 	* Document (ExportSpacings): Added.
 	* all files: Added © message and license.
